discussion/kv_engine/125163/125163_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 15:33:36.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 15:33:52.000000000
Message: 
Patch Set 7:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 15:35:13.000000000
Message: 
Patch Set 7: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 15:49:03.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27424/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27424/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23461/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3047/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3056/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3056/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10909/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10909/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3112/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3112/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2104/ : ABORTED

Failure of a CTest test [2020-04-08T15:48:58.710Z] 247/397 Test #247: ep_testsuite_dcp.ephemeral.comp_active ......................................................................Child terminated ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2104/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2104/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1637/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1637/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1637/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/158/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
